<resources>
    <string name="app_name">Matchbook</string>
    <string name="empty_match_list">You don\'t have any match records yet\nTime to play golf!</string>
    <string name="match_with_title">Match with %s</string>
    <string name="match_start_date">Started at %s</string>
    <string name="play_with">Play with:</string>
    <string name="create_match">Create match</string>
    <string name="player_name_too_short">The player name is too short!</string>
    <string name="delete">Delete</string>
    <string name="match_deleted_successfully">Match deleted successfully!</string>
    <string name="undo">undo</string>
    <string name="date">Date</string>
    <string name="handicap">Handicap</string>
    <string name="match">Match</string>
    <string name="total">Total</string>
    <string name="earnings">Earnings</string>
    <string name="add_row">Add Row</string>
    <string name="loss">Loss</string>
    <string name="won">Won</string>
    <string name="please_fill_this_field">Please fill this field</string>
    <string name="money_amount">Money</string>
    <string name="lost_match">Is a lost match</string>
    <string name="register_play">Register play</string>
    <string name="delete_dialog_title">Delete match</string>
    <string name="are_you_sure_you_want_to_delete_the_match">Are you sure you want to delete this match?</string>
    <string name="cancel">Cancel</string>
    <string name="edit_note">Edit match note</string>
    <string name="predicted_handicap">Predicted handicap</string>
    <string name="add_a_note">Add a note</string>
    <string name="ok">OK</string>
</resources>
