<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="8dp">

        <TextView
                android:id="@+id/dialogTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:minWidth="240dp"
                android:text="@string/edit_note"
                android:textColor="?android:attr/textColorPrimary"
                android:textSize="20sp"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@id/note_field_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0" />

        <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/note_field_layout"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginTop="8dp"
                android:minWidth="240dp"
                app:layout_constraintBottom_toTopOf="@id/add_note_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dialogTitle">

            <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/note_field_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/add_a_note"
                    android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <Button
                android:id="@+id/add_note_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="?android:attr/selectableItemBackground"
                android:text="@string/ok"
                android:textColor="?android:attr/colorAccent"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/note_field_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>